# inkrypt

./: .gitignore  README.md  biome.json  biome.jsonc  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  turbo.json
.husky/: pre-commit
apps/backend/: package.json  wrangler.jsonc
apps/backend/src/: index.ts
apps/client/: .gitignore  .prettierrc  package.json  tsconfig.json  vite.config.ts
apps/client/src/: app.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src-tauri/src/vault/: commands.rs  manager.rs  mod.rs  models.rs  watcher.rs
apps/client/src/routes/: +page.svelte
apps/client/src/types/: vault.ts
apps/server/: package.json  tsconfig.json  wrangler.jsonc  wrangler.toml
apps/server/src/: index.ts
apps/server/src/durable-objects/: yjs-durable-object.ts
apps/server/src/middleware/: auth.ts  upgrade.ts
apps/server/src/routes/: sync.ts
apps/server/src/types/: index.ts
apps/server/src/utils/: error-tracker.ts
